--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/lab": "^6.0.0-beta.30",
+    "@mui/x-date-pickers": "^7.27.3",
     "@shadcn/ui": "^0.0.4",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.13",
     "font-awesome": "^4.7.0",
     "framer-motion": "^12.4.10",
     "gridjs": "^6.2.0",
+    "jspdf": "^3.0.0",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
-    "recharts": "^2.15.1"
+    "recharts": "^2.15.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
