--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mui/lab": "^6.0.0-beta.30",
     "@mui/x-date-pickers": "^7.27.3",
     "@shadcn/ui": "^0.0.4",
