--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/lab": "^6.0.0-beta.30",
+    "@mui/material": "^6.4.7",
     "@mui/x-date-pickers": "^7.27.3",
     "@shadcn/ui": "^0.0.4",
     "bootstrap": "^5.3.3",
