--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^6.4.7",
     "@mui/x-date-pickers": "^7.27.3",
     "@shadcn/ui": "^0.0.4",
+    "@tanstack/react-query": "^5.68.0",
+    "@tanstack/react-table": "^8.21.2",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
     "font-awesome": "^4.7.0",
